<resources>
    <string name="app_name">Android-Concepts</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bound_service">Bound Service</string>
    <string name="unbound_service">Un Bound Service</string>
    <string name="get_random_number">Generate Random Number</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_life_cycle">ActivityLifeCycle</string>
    <string name="title_activity_broadcast_receiver">BroadcastReceiverActivity</string>
</resources>
