<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceActivity">

    <TextView
        android:id="@+id/textViewRandomNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/get_random_number" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnStartService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        app:layout_constraintTop_toBottomOf="@id/textViewRandomNumber" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnStopService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        app:layout_constraintTop_toBottomOf="@+id/btnStartService" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnBoundService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bound_service"
        app:layout_constraintTop_toBottomOf="@+id/btnStartService" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnUnBoundService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unbound_service"
        app:layout_constraintTop_toBottomOf="@+id/btnBoundService" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnGetRandomNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_random_number"
        app:layout_constraintTop_toBottomOf="@+id/btnUnBoundService" />

</android.support.constraint.ConstraintLayout>